[package]
name = "grid-disk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
aws-smithy-http = "0.49.0"
rand = "0.8.0"
structopt = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }